# Tipyverse

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
src/: __init__.py
src/tipyverse/: __init__.py  conflicts.py  data_manipulation.py  tidy_dataframe.py  utilities.py
tests/: test_data_manipulation.py  test_tidy_dataframe.py
