[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_tipyverse_axolmain"
version = "0.0.1"
description = "A package to install Python equivalents of R Tidyverse packages"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Sebastian Dunn", email = "sebastiandunn@sdmdigital.co" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lets-plot",
    "siuba",
    "swifter",
    "sqlalchemy",
    "mysql-connector-python",
    "pyreadstat",
    "requests",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pydrive2",
    "beautifulsoup4",
    "lxml",
    "playwright",
    "toolz",
    "polars",
    "fastapi",
    "dask",
    "plotnine",
    "seaborn",
    "numpy",
    "scipy",
    "statsmodels",
    "altair"
]

[project.license]
file = "LICENSE"

[project.keywords]
keywords = ["tidyverse", "R", "data science", "python"]

[project.optional-dependencies]
notebook = ["swifter"]
groupby = ["swifter"]

[project.urls]
homepage = "https://github.com/pypa/sampleproject"
issues = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.bdist_wheel]
universal = true
