[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tipyverse"
version = "0.0.1"
description = "A package to install Python equivalents of R Tidyverse packages"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Sebastian Dunn", email = "sebastiandunn@sdmdigital.co" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lets-plot",
    "siuba",
    "swifter",
    "sqlalchemy",
    "mysql-connector-python",
    "pyreadstat",
    "requests",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pydrive2",
    "beautifulsoup4",
    "lxml",
    "playwright",
    "toolz",
    "polars",
    "fastapi",
    "dask",
    "plotnine",
    "seaborn",
    "numpy",
    "scipy",
    "statsmodels",
    "altair"
]
keywords = ["tidyverse", "R", "data science", "python"]
license = { file = "LICENSE" }

[project.optional-dependencies]
notebook = ["swifter"]
groupby = ["swifter"]

[project.urls]
Homepage = "https://github.com/axolmain/Tipyverse"
Issues = "https://github.com/axolmain/Tipyverse/issues"
Repository = "https://github.com/axolmain/Tipyverse.git"

[tool.bdist_wheel]
universal = true

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.pip-tools]
allow-unsafe = true
resolver = "backtracking"
strip-extras = true
